{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 23,
  "lineage": "a2d65c15-0ebe-38cf-ae32-4620369e361d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "architect_eip_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-078661b65e4ccb467",
            "association_id": "eipassoc-041dc5bb069eee051",
            "domain": "vpc",
            "id": "eipalloc-078661b65e4ccb467",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-01938160bdcfbc376",
            "private_dns": "ip-192-170-0-216.ap-northeast-1.compute.internal",
            "private_ip": "192.170.0.216",
            "public_dns": "ec2-52-199-164-247.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.199.164.247",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "architect",
              "Name": "architect_eip_nat_gateway"
            },
            "tags_all": {
              "Environment": "architect",
              "Name": "architect_eip_nat_gateway"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "architect_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:internet-gateway/igw-0098247fb35f4ad3c",
            "id": "igw-0098247fb35f4ad3c",
            "owner_id": "569083195829",
            "tags": {
              "Environment": "architect",
              "Name": "architect_igw"
            },
            "tags_all": {
              "Environment": "architect",
              "Name": "architect_igw"
            },
            "vpc_id": "vpc-05df881f6cb8c52d1"
          },
          "dependencies": [
            "aws_vpc.architect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "architect_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-078661b65e4ccb467",
            "association_id": "eipassoc-041dc5bb069eee051",
            "connectivity_type": "public",
            "id": "nat-060350880ab0d6081",
            "network_interface_id": "eni-01938160bdcfbc376",
            "private_ip": "192.170.0.216",
            "public_ip": "52.199.164.247",
            "subnet_id": "subnet-03a53580f3c0a9e72",
            "tags": {
              "Environment": "architect",
              "Name": "architect_nat"
            },
            "tags_all": {
              "Environment": "architect",
              "Name": "architect_nat"
            }
          },
          "dependencies": [
            "aws_eip.architect_eip_nat_gateway",
            "aws_subnet.architect_bastion",
            "aws_vpc.architect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "architect_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:route-table/rtb-006fbcd6d0bf5a7f1",
            "id": "rtb-006fbcd6d0bf5a7f1",
            "owner_id": "569083195829",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0098247fb35f4ad3c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "architect",
              "Name": "architect_bastion"
            },
            "tags_all": {
              "Environment": "architect",
              "Name": "architect_bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-05df881f6cb8c52d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.architect_igw",
            "aws_vpc.architect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "architect_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:route-table/rtb-0e9bb3334fe339878",
            "id": "rtb-0e9bb3334fe339878",
            "owner_id": "569083195829",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-060350880ab0d6081",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "architect",
              "Name": "architect_dev"
            },
            "tags_all": {
              "Environment": "architect",
              "Name": "architect_dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-05df881f6cb8c52d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.architect_nat",
            "aws_vpc.architect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "architect_ops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:route-table/rtb-0b8dbe1bdd190c364",
            "id": "rtb-0b8dbe1bdd190c364",
            "owner_id": "569083195829",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-060350880ab0d6081",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "architect",
              "Name": "architect_ops"
            },
            "tags_all": {
              "Environment": "architect",
              "Name": "architect_ops"
            },
            "timeouts": null,
            "vpc_id": "vpc-05df881f6cb8c52d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.architect_nat",
            "aws_vpc.architect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "architect_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08df812c484e513c0",
            "route_table_id": "rtb-006fbcd6d0bf5a7f1",
            "subnet_id": "subnet-03a53580f3c0a9e72"
          },
          "dependencies": [
            "aws_internet_gateway.architect_igw",
            "aws_route_table.architect_bastion",
            "aws_subnet.architect_bastion",
            "aws_vpc.architect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "architect_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e646e7a9da2ee9a4",
            "route_table_id": "rtb-0e9bb3334fe339878",
            "subnet_id": "subnet-05734beb5c90f411b"
          },
          "dependencies": [
            "aws_eip.architect_eip_nat_gateway",
            "aws_nat_gateway.architect_nat",
            "aws_route_table.architect_dev",
            "aws_subnet.architect_bastion",
            "aws_subnet.architect_dev",
            "aws_vpc.architect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "architect_ops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087a3f0a71ee4f29b",
            "route_table_id": "rtb-0b8dbe1bdd190c364",
            "subnet_id": "subnet-02183d5d7e2f6ce37"
          },
          "dependencies": [
            "aws_eip.architect_eip_nat_gateway",
            "aws_nat_gateway.architect_nat",
            "aws_route_table.architect_ops",
            "aws_subnet.architect_bastion",
            "aws_subnet.architect_ops",
            "aws_vpc.architect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_architect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-0658ab4dadaf5a974",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0658ab4dadaf5a974",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f44c7fc41b8bd8b5"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev_architect",
            "name_prefix": "",
            "owner_id": "569083195829",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "architect",
              "Name": "dev_architect"
            },
            "tags_all": {
              "Environment": "architect",
              "Name": "dev_architect"
            },
            "timeouts": null,
            "vpc_id": "vpc-05df881f6cb8c52d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.architect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ops_architect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-00e3e0a2b25eb4504",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e3e0a2b25eb4504",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f44c7fc41b8bd8b5"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ops_architect",
            "name_prefix": "",
            "owner_id": "569083195829",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "architect",
              "Name": "ops_architect"
            },
            "tags_all": {
              "Environment": "architect",
              "Name": "ops_architect"
            },
            "timeouts": null,
            "vpc_id": "vpc-05df881f6cb8c52d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.architect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ops_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-0f44c7fc41b8bd8b5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f44c7fc41b8bd8b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ops_bastion",
            "name_prefix": "",
            "owner_id": "569083195829",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "architect",
              "Name": "ops_bastion"
            },
            "tags_all": {
              "Environment": "architect",
              "Name": "ops_bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-05df881f6cb8c52d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.architect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "architect_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:subnet/subnet-03a53580f3c0a9e72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.170.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a53580f3c0a9e72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "569083195829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "architect",
              "Name": "architect_bastion_subnet"
            },
            "tags_all": {
              "Environment": "architect",
              "Name": "architect_bastion_subnet"
            },
            "vpc_id": "vpc-05df881f6cb8c52d1"
          },
          "dependencies": [
            "aws_vpc.architect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "architect_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:subnet/subnet-05734beb5c90f411b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.170.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05734beb5c90f411b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569083195829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "architect",
              "Name": "architect_dev_subnet"
            },
            "tags_all": {
              "Environment": "architect",
              "Name": "architect_dev_subnet"
            },
            "vpc_id": "vpc-05df881f6cb8c52d1"
          },
          "dependencies": [
            "aws_vpc.architect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "architect_ops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:subnet/subnet-02183d5d7e2f6ce37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.170.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02183d5d7e2f6ce37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569083195829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "architect",
              "Name": "architect_ops_subnet"
            },
            "tags_all": {
              "Environment": "architect",
              "Name": "architect_ops_subnet"
            },
            "vpc_id": "vpc-05df881f6cb8c52d1"
          },
          "dependencies": [
            "aws_vpc.architect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "architect_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:vpc/vpc-05df881f6cb8c52d1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.170.0.0/16",
            "default_network_acl_id": "acl-05214168a41fda502",
            "default_route_table_id": "rtb-064e377a18bdf023f",
            "default_security_group_id": "sg-07e3e1d7d6916a1c8",
            "dhcp_options_id": "dopt-0705ec2b8c927dbea",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05df881f6cb8c52d1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-064e377a18bdf023f",
            "owner_id": "569083195829",
            "tags": {
              "Environment": "architect",
              "Name": "archi_vpc"
            },
            "tags_all": {
              "Environment": "architect",
              "Name": "archi_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:vpc-endpoint/vpce-0a3156eecb58fc8a6",
            "cidr_blocks": [
              "52.219.195.0/24",
              "3.5.152.0/21",
              "52.219.200.0/23",
              "52.219.150.0/23",
              "52.219.0.0/20",
              "52.219.162.0/23",
              "52.219.152.0/22",
              "52.219.136.0/22",
              "52.219.16.0/22",
              "52.219.196.0/22",
              "52.219.68.0/22",
              "52.219.172.0/22"
            ],
            "id": "vpce-0a3156eecb58fc8a6",
            "owner_id": "569083195829",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "state": "available",
            "tags": {
              "Environment": "ops",
              "Name": "ops_s3_endpoint"
            },
            "tags_all": {
              "Environment": "ops",
              "Name": "ops_s3_endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-05df881f6cb8c52d1"
          },
          "dependencies": [
            "aws_vpc.architect_vpc"
          ]
        }
      ]
    }
  ]
}